# Unity-Catalog

./: Cargo.toml  README.md
config/: default.toml
server/: Cargo.toml
server/src/: main.rs
server/src/config/: mod.rs
server/src/config/database/: mod.rs
server/src/config/server/: adls.rs  gcs.rs  mod.rs  s3.rs
server/src/errors/: mod.rs
server/src/service/credential/: context.rs  mod.rs
server/src/service/credential/aws/: aws_credential_vendor.rs  mod.rs  s3_storage_config.rs
